Updated the count pax design issue and alignment issue in the checkout section

--- a/public/style.css
+++ b/public/style.css
@@ -370,7 +370,7 @@ input.help-block + .checkmark {border-color: #f00 !important;}
 .tour-packages-item .tour-packages-group-title {font-size: 13px; font-weight: 700; line-height: 1.3; color: #333; margin-bottom: 11px;}
 .tour-packages-item .tour-packages-selected-people {margin-bottom: 6px; display: flex; align-items: center;}
 .tour-packages-item .tour-packages-selected-people-title {font-size: 13px; font-weight: 400; line-height: 1.3; color: #333;}
-.tour-packages-item .tour-packages-selected-people-count input {font-size: 13px; font-weight: 700; line-height: 1; color: #4C76B2; border-radius: 4px; border: 1px solid rgba(76, 118, 178, 0.50); background: #FFF; box-shadow: 0px -3.40909px 3px 0px rgba(0, 0, 0, 0.12) inset; width: 29px; height: 17px; margin-left: 12px; text-align: center;}
+.tour-packages-item .tour-packages-selected-people-count input {font-size: 13px; font-weight: 700; line-height: 1; color: #4C76B2; border-radius: 4px; border: 1px solid rgba(76, 118, 178, 0.50); background: #FFF; box-shadow: 0px -3.40909px 3px 0px rgba(0, 0, 0, 0.12) inset; width: 29px; height: 17px; margin-left: 12px; text-align: center; padding-bottom: 3px;}
 
 .tour-packages-item .tour-packages-totalcost {padding: 20px 30px 15px 30px; max-width: 320px; position: relative; overflow: hidden;}
 .tour-packages-item .tour-packages-totalcost:before {content: ""; width: 20px; height: 20px; position: absolute; top: calc(50% - 5px); left: -10px; border-top: 1px solid #A6B6CE; border-right: 1px solid #A6B6CE; border-radius: 50px; transform: rotate(45deg); background-color: #fff; z-index: 1;}
@@ -530,7 +530,7 @@ input.help-block + .checkmark {border-color: #f00 !important;}
 .total-cost-wrap .title-wrap .title {color: #0070FF; font-size: 16px; font-weight: 700; line-height: 1; margin-bottom: 5px; text-align: left; }
 .total-cost-wrap .title-wrap .time, .total-cost-wrap .ages-wrap .title, .total-cost-wrap .other-details-wrap .title, .total-cost-wrap .other-details-wrap .amount {color: #333;font-size: 14px; font-weight: 400; line-height: 1; text-align: left; }
 .total-cost-wrap .ages-wrap {background: #D8E2F2; padding: 5px 15px; margin: 7px; }
-.total-cost-wrap .ages-wrap .number {border-radius: 3.502px; border: 0.7px solid rgba(76, 118, 178, 0.50); background: #FFF; box-shadow: 0px -3.502px 2.801px 0px rgba(0, 0, 0, 0.12) inset; color: #0171C2; text-align: center; font-size: 14px; font-weight: 900; line-height: normal; padding: 2px 8px; }
+.total-cost-wrap .ages-wrap .number {border-radius: 3.502px; border: 0.7px solid rgba(76, 118, 178, 0.50); background: #FFF; box-shadow: 0px -3.502px 2.801px 0px rgba(0, 0, 0, 0.12) inset; color: #0171C2; text-align: center; font-size: 14px; font-weight: 900; line-height: normal; padding: 2px 8px 4px 8px; }
 .total-cost-wrap .other-details-wrap {background: #EFEFEF; padding: 6px 18px 10px 22px; margin: 1px; }
 .total-cost-wrap .other-details-wrap:last-child {border-radius: 0px 0px 5px 5px; }
 .total-cost-wrap.third .title-wrap {background: #DEEEDF; padding: 13px 23px 11px;}
@@ -695,7 +695,7 @@ input.help-block + .checkmark {border-color: #f00 !important;}
 	.payment-form-sec .masks-mandatory-notice {font-size: 14px; line-height: 18px;}
 	.payment-form-sec .form-field-title {font-size: 20px; margin-bottom: 20px;}
 	.payment-form-sec .form-field-wrp {margin-bottom: 20px;}
-	.payment-form-sec .payment-text {font-size: 20px; text-align: center;}
+	.payment-form-sec .payment-text {font-size: 20px; text-align: left;}
 	.payment-form-sec .makeaayment-wrap input[type="submit"] {font-size: 20px;}
 	.payment-form-sec .policy-item-wrp {max-height: unset;}
 	.payment-form-sec .payment-form-notice.important-note {margin-top: -24px;}
